Fix comment popup display on smaller screens

--- a/src/style.css
+++ b/src/style.css
@@ -102,7 +102,7 @@ footer > div > p {
 
 .comment-container {
   position: fixed;
-  top: 5%;
+  top: 1%;
   left: calc(50% - 150px);
   z-index: 20;
   width: 300px;
@@ -237,6 +237,12 @@ input[type=number] {
 
   .comment-container {
     padding: 20px;
+  }
+}
+
+@media (min-width: 860px) {
+  .comment-container {
+    top: 5%;
   }
 
   .comment-container > img {
